--- a/css/entrada.css
+++ b/css/entrada.css
@@ -41,6 +41,7 @@
     margin-bottom: 10px;
     color: #FF0000;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
     flex-direction: column;
     text-transform: uppercase;
     font-size: 14px;
@@ -54,6 +55,7 @@
 	border-radius: 12px;
     background-color: #EFEEE0;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
 }
 
 .inputs_form:focus{
@@ -72,6 +74,7 @@
     margin-bottom: 25px;
     color: #FF0000;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
     flex-direction: column;
     text-transform: uppercase;
     font-size: 14px;
@@ -94,6 +97,7 @@
     color: white;
     font-size: 22px;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
     text-transform: uppercase;
     cursor: pointer;
 }
