--- a/css/saida.css
+++ b/css/saida.css
@@ -42,6 +42,7 @@
     margin-bottom: 10px;
     color: #FF0000;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
     flex-direction: column;
     text-transform: uppercase;
     font-size: 14px;
@@ -55,6 +56,7 @@
 	border-radius: 12px;
     background-color: #EFEEE0;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
 }
 
 .inputs_form:focus{
@@ -73,6 +75,7 @@
     margin-bottom: 50px;
     color: #FF0000;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
     flex-direction: column;
     text-transform: uppercase;
     font-size: 14px;
@@ -95,6 +98,7 @@
     color: white;
     font-size: 22px;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
     text-transform: uppercase;
     cursor: pointer;
 }
