--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,23 @@ body{
     height: 65px;
     /* background-color: aqua; */
     color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .voltar{
+    background-color: aqua;
+    width: 40px;
+    height: 40px;
     color: white;
-    font-size: 15px;
+    font-size: 14px;
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn_sair{
@@ -67,6 +78,13 @@ body{
     font-size: 15px;
     color: white;
     text-transform: uppercase;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+}
+
+.btn_sair:focus{
+    outline: none;
 }
 
 .rodape{
@@ -81,3 +99,101 @@ body{
     color: white;
     text-transform: uppercase;
 }
+
+/* modal */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    display: flex;
+    flex-direction: row;
+  }
+  
+  /* Modal Content/Box */
+  .conteudo_modal {
+    background-color: #ED4343;
+    width: 27%;
+    height: 160px;
+    border-radius: 15px;
+    /* margin-top: 210px; */
+    margin-left: 700px;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.6s;
+    animation-name: animatetop;
+    animation-duration: 0.6s
+  }
+
+  .conteudo_modal > p{
+    color: #EFEEE0;
+    font-size: 14px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-left: 30px;
+    padding-top: 25px;
+  }
+
+  .posicionamento_btns{
+    /* background-color: aqua; */
+    width: 97%;
+    height: 105px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  .btns_modal{
+      width: 28%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      /* background-color: aqua; */
+  }
+
+  .btn_modal_f{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    color: #EFEEE0;
+    text-transform: uppercase;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+  }
+
+  .btn_modal_ok{
+    padding: 3px 13px 3px 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    color: #FF0000;
+    border-radius: 5px;
+    text-transform: uppercase;
+    background-color: transparent;
+    cursor: pointer;
+    border: solid 1px #EFEEE0;
+    background-color: #EFEEE0;
+  }
+
+  /* animação modal */
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0px; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0px; opacity:1}
+  }
+  
