finalizado com resposividade para computadores

--- a/css/entrada.css
+++ b/css/entrada.css
@@ -101,3 +101,110 @@
     text-transform: uppercase;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1536px) {
+    .secao_form_entrada{
+        height: 738px;
+    }
+
+    .fundo_form{
+        width: 1100px;
+        height: 600px;
+    }
+
+    .titulo_form{
+        font-size: 50px;
+    }
+
+    .input_cadastro{
+        width: 100%;
+        height: 65px;
+        margin-bottom: 10px;
+        font-size: 13px;
+    }
+
+    .inputs_form{
+        height: 100px;
+        padding: 10px;
+        margin-bottom: 11px;
+    }
+
+    .input_junto{
+        width: 48%;
+        height: 65px;
+        margin-bottom: 25px;
+        font-size: 13px;
+    }
+
+    .btn{
+        width: 23%;
+        height: 55px;
+        padding: 10px;
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .secao_form_entrada{
+        height: 774px;
+    }
+
+    .fundo_form{
+        width: 1100px;
+        height: 600px;
+    }
+}
+
+@media screen and (max-width: 1366px) {
+    .secao_form_entrada{
+        height: 642px;
+    }
+
+    .fundo_form{
+        width: 1000px;
+        height: 525px;
+    }
+
+    .titulo_form{
+        font-size: 40px;
+        margin-bottom: 18px;
+    }
+
+    .input_cadastro{
+        width: 100%;
+        height: 50px;
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
+
+    .inputs_form{
+        height: 100px;
+        padding: 10px;
+        margin-bottom: 12px;
+    }
+
+    .input_junto{
+        width: 48%;
+        height: 50px;
+        margin-bottom: 28px;
+        font-size: 12px;
+    }
+
+    .btn{
+        width: 21%;
+        height: 50px;
+        padding: 10px;
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .secao_form_entrada{
+        height: 594px;
+    }
+
+    .fundo_form{
+        width: 1000px;
+        height: 525px;
+    }
+}
