--- a/css/administrativo.css
+++ b/css/administrativo.css
@@ -132,10 +132,11 @@
     font-family: 'Ubuntu', sans-serif;
     font-weight:300 ;
     font-size: 14px;
-    color: #ED4343;
+    color: black;
     text-transform: uppercase;
     display: flex;
     justify-content: center;
+    align-items: center;
 
 }
 
@@ -175,4 +176,100 @@
     font-weight: 700;
     text-transform: uppercase;
     cursor: pointer;
+}
+
+@media screen and (max-width: 1536px) {
+    .secao_form_controle{
+        height: 738px;
+    }
+
+    .fundo_form{
+        width: 1100px;
+        height: 620px;
+    }
+
+    .inputs_form{
+        height: 50px;;
+        font-size: 11px;
+    }
+
+    .btn{
+        width: 100%;
+        height: 60px;
+        padding: 10px 50px 10px 50px;
+        font-size: 22px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .secao_form_controle{
+        height: 774px;
+    }
+
+    .fundo_form{
+        width: 1100px;
+        height: 620px;
+    }
+
+    .inputs_form{
+        height: 50px;;
+        font-size: 11px;
+    }
+}
+
+@media screen and (max-width: 1366px) {
+    .secao_form_controle{
+        height: 642px;
+    }
+
+    .fundo_form{
+        width: 1000px;
+        height: 520px;
+    }
+
+    .titulo_form{
+        font-size: 40px;
+    }
+
+    .barra_pesquisa{
+        width: 30%;
+        height: 45px;
+    }
+    
+    .input_pesquisa{
+        margin-top: 3px;
+        margin-left: 20px;
+        width: 75%;
+        height: 35px;
+        font-size: 14px;
+    }
+
+    .coluna{
+        height: 45px;
+    }
+
+    .inputs_form{
+        height: 45px;
+        font-size: 10px;
+    } 
+
+    .btn{
+        width: 100%;
+        height: 45px;
+        padding: 10px 25px 10px 25px;
+        font-size: 14px;
+    }
+
+}
+
+@media screen and (max-width: 1280px) {
+    .secao_form_controle{
+        height: 594px;
+    }
+
+    .fundo_form{
+        width: 900px;
+        height: 500px;
+    }
+
 }
