--- a/css/login.css
+++ b/css/login.css
@@ -130,6 +130,15 @@
     font-weight: 700;
     text-transform: uppercase;
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn:active{
+    transition: 0.15s;
+    transform: scale(0.95);
 }
 
 @media screen and (max-width: 1536px) {
